force-app/main/default/objects/TimeSeries_Log__c/TimeSeries_Log__c.object-meta.xml
<CustomObject>
    <label>TimeSeries Log</label>
    <nameField>
        <displayFormat>TSL-{yyyy}-{mm}-{000000}</displayFormat>
        <label>TimeSeries Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSeries Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>