force-app/main/default/objects/TimeSeries_Log__c/fields/TS_Count__c.field-meta.xml
<CustomField>
    <fullName>TS_Count__c</fullName>
    <label>TS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>