force-app/main/default/objects/TimeSeries_Log__c/fields/TS_Log_DateTime__c.field-meta.xml
<CustomField>
    <fullName>TS_Log_DateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>TS Log DateTime</label>
    <type>DateTime</type>
</CustomField>