force-app/main/default/objects/TimeSeries_Log__c/listViews/All_logs.listView-meta.xml
<ListView>
    <fullName>All_logs</fullName>
    <columns>NAME</columns>
    <columns>TS_Log_DateTime__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>